--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,115 @@
     transform: rotate(360deg);
   }
 }
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+}
+
+.container {
+  margin: 1rem;
+  text-align: center;
+}
+
+.nav {
+  background-color: #333;
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+  gap: 2rem;
+  padding: 0 1rem;
+  text-align: center;
+}
+
+.site-title {
+  font-size: 2rem;
+  text-align: center;
+}
+
+.nav ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  display: flex;
+  gap: 1rem;
+}
+
+.nav a {
+  color: inherit;
+  text-decoration: none;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  padding: .25rem;
+}
+
+.nav li.active {
+  background-color: #555;
+}
+
+.nav li:hover {
+  background-color: #777;
+}
+
+.card-body {
+  background-color: #777;
+  align-self: center;
+}
+
+.card-header {
+  color: black;
+  background-color: #777;
+  text-align: center;
+  font-size: 150%;
+  font-weight: bold;
+}
+
+.card-title {
+  color: black;
+  font-size: 25%;
+}
+
+.card-text {
+  color: white;
+  font-size: 125%
+}
+
+#text {
+  color: black;
+}
+
+.balance-details {
+  background: #fff;
+  border-radius: 0px;
+  border: 10px;
+  margin: 5px ;
+  padding: 5px;
+  position: relative;
+  background-clip: content-box;
+  box-shadow: 5px 5px 5px rgba(0,0,0,0.05);
+}
+.balance-details h4 {
+  margin: 0 0 10px 0;
+  font-size: 1.2em;
+  color: #1aac83;
+}
+.balance-details p {
+  margin: 5;
+  font-size: 0.9em;
+  color: #555;
+}
+.balance-details span {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  cursor: pointer;
+  background: #f1f1f1;
+  padding: 6px;
+  border-radius: 50%;
+  color: #333;
+}
